--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libimage-exiftool-perl
         python -m pip install --upgrade pip
-        python -m pip install ruff pytest wheel
+        python -m pip install ruff pytest mypy
     - name: Install package
       run: |
         python -m pip install .
@@ -41,3 +41,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Type-check with mypy
+      run: |
+        mypy src tests
