--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,17 +30,14 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libimage-exiftool-perl
-        python -m pip install --upgrade pip
-        python -m pip install ruff pytest mypy
-    - name: Install package
+    - name: Install Hatch
+      uses: pypa/hatch@install
+    - name: Linting
       run: |
-        python -m pip install .
-    - name: Lint with ruff
+        hatch run style:check
+    - name: Unit tests
       run: |
-        ruff check
-    - name: Test with pytest
+        hatch run test:unit
+    - name: Type check
       run: |
-        pytest
-    - name: Type-check with mypy
-      run: |
-        mypy src tests
+        hatch run test:typing
