--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,18 +12,19 @@ description = "A library/tool to decode images in HEIC/HEIF format taken on Appl
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Topic :: Multimedia :: Graphics",
-    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
+  "Development Status :: 3 - Alpha",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Topic :: Multimedia :: Graphics",
+  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
 ]
 dependencies = [
-    "colour-science>=0.4.5",
-    "numpy>=1.24.0",
-    "opencv-python-headless>=4.0",
-    "pillow_heif>=0.20.0",
-    "PyExifTool>=0.5.6",
+  "colour-science>=0.4.5",
+  "numpy>=1.24.0",
+  "opencv-python-headless>=4.0",
+  "pillow_heif>=0.20.0",
+  "PyExifTool>=0.5.6",
 ]
 keywords = ["heic", "heif", "converter", "decoder", "HDR", "HDR Gain Map", "iPhone"]
 
@@ -38,7 +39,56 @@ python_version = "3.10"
 
 [[tool.mypy.overrides]]
 module = [
-    "exiftool",
-    "pillow_heif",
+  "exiftool",
+  "pillow_heif",
 ]
 ignore_missing_imports = true
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "src",
+  "pyproject.toml",
+  "LICENSE",
+  "README.md",
+]
+exclude = [
+  ".gitattributes",
+  ".gitignore",
+  ".github",
+  "tests",
+]
+
+[tool.hatch.envs.test]
+dependencies = [
+  "mypy",
+  "pytest",
+]
+
+[tool.hatch.envs.test.scripts]
+typing = [
+  "mypy src tests",
+]
+unit = [
+  "pytest tests",
+]
+
+[tool.hatch.envs.style]
+detached = true
+dependencies = [
+  "ruff",
+  "isort",
+]
+
+[tool.hatch.envs.style.scripts]
+check = [
+  "ruff check --diff src tests",
+  "isort --check-only --diff src tests",
+  #"ruff format --diff",
+]
+fmt = [
+  "isort src tests",
+]
