update build-backend to flit-core

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,4 +42,4 @@ jobs:
         diff requirements.old.txt requirements.txt
     - name: Build
       run: |
-        uvx hatch build
+        uvx flit build
