--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["flit_core>=3.8,<4"]
+build-backend = "flit_core.buildapi"
 
 [project]
 name = "apple-hdr-heic"
@@ -51,7 +51,7 @@ ignore_missing_imports = true
 # disable cache for easier development
 reinstall-package = ["apple-hdr-heic"]
 
-[tool.hatch.build.targets.sdist]
+[tool.flit.sdist]
 include = [
   "src",
   "pyproject.toml",
@@ -62,5 +62,6 @@ exclude = [
   ".gitattributes",
   ".gitignore",
   ".github",
+  "noxfile.py",
   "tests",
 ]
