--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,16 +22,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         lfs: true
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libimage-exiftool-perl
-    - name: Install uv
-      uses: astral-sh/setup-uv@v3
+    - uses: ./.github/actions/prepare-deps
     - name: Run nox
       run: |
         uvx nox
