--- a/.github/workflows/tests-builds.yml
+++ b/.github/workflows/tests-builds.yml
@@ -34,7 +34,8 @@ jobs:
     - name: Build package
       run: |
         uvx flit build --no-use-vcs
-    - name: Upload build artifacts
+    - name: Upload build artifacts (if Python 3.10)
+      if: matrix.python-version == "3.10"
       uses: actions/upload-artifact@v4
       with:
         name: build-artifacts
