--- a/.github/workflows/tests-builds.yml
+++ b/.github/workflows/tests-builds.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         uvx flit build --no-use-vcs
     - name: Upload build artifacts (if Python 3.10)
-      if: matrix.python-version == "3.10"
+      if: matrix.python-version == '3.10'
       uses: actions/upload-artifact@v4
       with:
         name: build-artifacts
