--- a/.github/workflows/tests-builds.yml
+++ b/.github/workflows/tests-builds.yml
@@ -21,6 +21,8 @@ jobs:
       with:
         lfs: true
     - uses: ./.github/actions/prepare-deps
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Run nox
       run: |
         uvx nox
@@ -47,7 +49,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
         dist-type: ["tar.gz", "whl"]
 
     steps:
