--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
   "colour-science>=0.4.5",
   "numpy>=1.24.0",
   "opencv-python-headless>=4.0",
+  "openexr>=3.3.2,<4.0",
   "pillow_heif>=0.20.0",
   "PyExifTool>=0.5.6",
 ]
@@ -43,6 +44,7 @@ python_version = "3.10"
 [[tool.mypy.overrides]]
 module = [
   "exiftool",
+  "OpenEXR",
   "pillow_heif",
 ]
 ignore_missing_imports = true
