--- a/.github/workflows/tests-builds.yml
+++ b/.github/workflows/tests-builds.yml
@@ -70,4 +70,5 @@ jobs:
     - name: Install and run pytest
       run: |
         uv pip install pytest
-        .venv/bin/pytest tests
+        source .venv/bin/activate
+        pytest tests
